# inf-fingerprint

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: build.yml
client/: Cargo.toml
client/src/: china.rs  identify.rs  lib.rs
client/src/components/: battery.rs  connection.rs  dom_render.rs  fonts.rs  mod.rs  navigator.rs  permissions.rs  persist.rs  storage_quota.rs  timezone.rs  ua_hints_high.rs  webgl_render.rs  webrtc.rs
docs/: integration.zh.md
examples/: demo.html
server/: Cargo.toml  Dockerfile  config.toml.example  nginx.conf.example
server/migrations/: 0001_init.sql  0002_more_signals.sql  0003_signature_recall_buckets.sql  0004_visitor_merges.sql
server/src/: api.rs  bayes.rs  config.rs  error.rs  features.rs  main.rs  matcher.rs  merger.rs  store.rs
src/: china.rs  ctx.rs  hash.rs  lib.rs
src/components/: audio.rs  canvas.rs  math_fp.rs  mod.rs  perf.rs  quirks.rs  screen.rs  speech.rs  touch.rs  webgl.rs
