[workspace]
members = ["client"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["yomomo-ai <lyy.yiyang@gmail.com>"]
license = "MIT"
repository = "https://github.com/yomomo-ai/inf-fingerprint"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
