[package]
name = "inf-fingerprint"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Browser fingerprint library, Rust to WASM, tuned for Chinese mainland mobile in-app browsers."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

# wasm-opt for size + perf. Feature flags must match what rustc emits — modern
# rustc produces wasm with nontrapping-float-to-int and sign-ext by default.
# binaryen is auto-downloaded from GitHub release; needs network reach.
[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O3",
    "--enable-bulk-memory",
    "--enable-mutable-globals",
    "--enable-nontrapping-float-to-int",
    "--enable-sign-ext",
    "--enable-reference-types",
]

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = [
    "-O",
    "--enable-bulk-memory",
    "--enable-mutable-globals",
    "--enable-nontrapping-float-to-int",
    "--enable-sign-ext",
]

[features]
default = ["panic_hook"]
panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
serde.workspace = true
serde-wasm-bindgen = "0.6.5"
serde_json.workspace = true
xxhash-rust.workspace = true
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3.77"
features = [
    "Window",
    "WorkerGlobalScope",
    "WorkerNavigator",
    "Document",
    "Element",
    "HtmlElement",
    "Navigator",
    "NavigatorUaData",
    "UaDataValues",
    "Screen",
    "ScreenOrientation",
    "Performance",
    "Storage",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "TextMetrics",
    "WebGlRenderingContext",
    "WebGl2RenderingContext",
    "WebGlActiveInfo",
    "WebGlShaderPrecisionFormat",
    "AudioContext",
    "OfflineAudioContext",
    "OscillatorNode",
    "OscillatorType",
    "AudioBuffer",
    "AudioDestinationNode",
    "AudioNode",
    "AudioParam",
    "DynamicsCompressorNode",
    "AudioContextState",
    "MediaDevices",
    "MediaDeviceInfo",
    "MediaDeviceKind",
    "Permissions",
    "PermissionState",
    "PermissionStatus",
    "MediaQueryList",
    "SpeechSynthesis",
    "SpeechSynthesisVoice",
    "RtcPeerConnection",
    "RtcConfiguration",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcSdpType",
    "RtcIceServer",
    "RtcDataChannel",
    "RtcDataChannelInit",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlUniformLocation",
    "WebGlContextAttributes",
    "DomRect",
    "DomRectReadOnly",
    "DomRectList",
    "FontFaceSet",
    "FontFace",
    "SvgsvgElement",
    "SvgPathElement",
    "Request",
    "RequestInit",
    "RequestMode",
    "RequestCredentials",
    "Headers",
    "Response",
    "AbortController",
    "AbortSignal",
    "console",
]
