[package]
name = "inf-fingerprint"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Browser fingerprint library, Rust to WASM, tuned for Chinese mainland mobile in-app browsers."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

# wasm-opt for size + perf. Feature flags must match what rustc emits — modern
# rustc produces wasm with nontrapping-float-to-int and sign-ext by default.
# binaryen is auto-downloaded from GitHub release; needs network reach.
[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-Oz",
    "--enable-bulk-memory",
    "--enable-mutable-globals",
    "--enable-nontrapping-float-to-int",
    "--enable-sign-ext",
    "--enable-reference-types",
]

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = [
    "-O",
    "--enable-bulk-memory",
    "--enable-mutable-globals",
    "--enable-nontrapping-float-to-int",
    "--enable-sign-ext",
]

[features]
default = ["panic_hook"]
panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.120"
wasm-bindgen-futures = "0.4.70"
js-sys = "0.3.97"
serde.workspace = true
serde-wasm-bindgen = "0.6.5"
rmp-serde = "1.3"
futures = { version = "0.3", default-features = false, features = ["async-await"] }
xxhash-rust.workspace = true
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3.97"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Navigator",
    "Screen",
    "Performance",
    "Storage",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "TextMetrics",
    "WebGlRenderingContext",
    "WebGlActiveInfo",
    "WebGlShaderPrecisionFormat",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlUniformLocation",
    "WebGlContextAttributes",
    "OfflineAudioContext",
    "OscillatorNode",
    "OscillatorType",
    "AudioBuffer",
    "AudioDestinationNode",
    "AudioNode",
    "AudioParam",
    "DynamicsCompressorNode",
    "Permissions",
    "PermissionState",
    "PermissionStatus",
    "MediaQueryList",
    "RtcPeerConnection",
    "RtcConfiguration",
    "RtcSessionDescriptionInit",
    "RtcDataChannel",
    "DomRect",
    "Request",
    "RequestInit",
    "RequestMode",
    "Headers",
    "Response",
    "AbortController",
    "AbortSignal",
    "console",
]
