[package]
name = "inf-fingerprint-server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Bayesian visitor identification service for inf-fingerprint."
publish = false

[[bin]]
name = "inf-fingerprint-server"
path = "src/main.rs"

[dependencies]
axum = "0.7.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "request-id", "limit"] }
hyper = "1"

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde = "1.3"
xxhash-rust.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    "migrate",
] }

toml = "0.8"
humantime-serde = "1"
const_format = "0.2"
moka = { version = "0.12", features = ["future"] }
